<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.lecturer.ui.RegistrationActivity"
    tools:showIn="@layout/activity_registration"
    android:background="@android:color/white">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:padding="@dimen/fab_margin"
        android:background="@android:color/white"
        android:layout_centerInParent="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/fab_margin">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:hint="@string/name"
                android:nextFocusDown="@+id/course"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:inputType="text"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/course"
                android:hint="@string/course"
                android:nextFocusDown="@+id/course_code"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:inputType="text"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/course_code"
                android:hint="@string/course_code"
                android:nextFocusDown="@+id/level"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/level"
                android:hint="@string/level"
                android:nextFocusDown="@+id/semester"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:inputType="text"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/semester"
                android:hint="@string/semester"
                android:nextFocusDown="@+id/department"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:inputType="text"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/department"
                android:hint="@string/department"
                android:nextFocusDown="@+id/password"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:inputType="text"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"/>
        </LinearLayout>
        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center"
            android:visibility="gone"/>
    </android.support.v7.widget.CardView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_register"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/fab_margin"
        android:padding="@dimen/fab_margin"
        android:text="@string/register"/>

</RelativeLayout>
