<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.lecturer.ui.AddStudentActivity"
    tools:showIn="@layout/activity_add_student">
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:layout_centerInParent="true"
    android:layout_margin="@dimen/fab_margin">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    >
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_matric_number"
        android:layout_margin="@dimen/fab_margin"
        android:hint="@string/student_matric_number"
        android:inputType="text"
        android:nextFocusDown="@+id/edt_student_name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_student_name"
        android:layout_margin="@dimen/fab_margin"
        android:hint="@string/student_name"
        android:inputType="text"
        android:nextFocusDown="@+id/edt_gender"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gender"
        android:layout_gravity="left"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rg_gender"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_male"
            android:text="Male"
            android:layout_marginRight="@dimen/fab_margin"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_female"
            android:text="Female"/>
    </RadioGroup>
</LinearLayout>
</android.support.v7.widget.CardView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/btn_add_student"
        android:padding="@dimen/fab_margin"
        android:layout_margin="@dimen/fab_margin"
        android:text="@string/add_student"/>
    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:layout_centerInParent="true"/>
</RelativeLayout>
